# vuk

./: Cargo.toml  README.md
.github/workflows/: main.yml
src/: main.rs  model.rs  parser.rs  ui.rs  ui_controller.rs  ui_state.rs
src/diagram/: diagram.rs  item.rs  mod.rs  model.rs
src/parser/: aidl.rs  error.rs  mod.rs
src/parser/aidl/: ast.rs  parse.rs  primitive.rs  tokens.rs
src/ui/qml/: ApplicationSettings.qml  Connector.qml  CustomToolButton.qml  DiagramItem.qml  Selection.qml  main.qml
src/ui/qml/style/: Style.qml
src/ui_iced/: diagram.rs  item.rs  mod.rs
src/ui_quick/: Actions.qml  Colors.qml  Connector.qml  CustomToolButton.qml  Diagram.qml  DiagramItem.qml  Documentation.qml  ItemSymbol.qml  Navigation.qml  OpenFileDialog.qml  Selection.qml  Style.qml  main.qml  mod.rs
src/ui_quick/style/: Style.qml
src/ui_sixtyfps/: mod.rs  vuk.60
