[package]
name = "vuk"
version = "0.1.0"
authors = ["Benoit Walter <b.walter@meerun.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced_graphics = "0.1.0"
iced_native = "0.3.0"
iced = { version = "0.2.0", features = ["tokio"] }
nom = "6.0.1"
tokio = "1.0.1"
