[package]
name = "vuk"
version = "0.1.0"
authors = ["Benoit Walter <b.walter@meerun.de>"]
edition = "2018"

[dependencies]
color-eyre = "0.5.10"
cstr = ""
jane-eyre = "0.3.0"
nom = "6.0.1"
nom_locate = "3.0.0"
once_cell = "1.5.2"
path-slash = "0.1.3"
qmetaobject = "0.1.4"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
strum = "0.20.0"
strum_macros = "0.20.1"
tokio = "1.0.1"
walkdir = "2.3.1"